# ferrofetch

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  set_distro_ascii.rs
